--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "homepage": "http://armillamain.github.io/ArmillaStore",
+  "homepage": "http://armilla.ignuxas.com",
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.5.0",
-    "@mui/x-data-grid": "^5.6.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
+    "@mui/x-data-grid": "^5.17.14",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "aos": "^2.3.4",
-    "axios": "^0.26.0",
+    "axios": "^1.2.1",
     "install": "^0.13.0",
-    "npm": "^8.5.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "npm": "^9.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "^5.0.1",
     "react-scrollmagic": "^2.3.0",
-    "react-table": "^7.7.0",
+    "react-table": "^7.8.0",
     "stl-viewer": "^0.12.0",
-    "three": "^0.139.2",
-    "web-vitals": "^2.1.4"
+    "swiper": "^8.4.5",
+    "three": "^0.147.0",
+    "web-vitals": "^3.1.0",
+    "whatamesh": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
